--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.16",
     "tailwindcss": "^4.1.16"
+  },
+  "name": "my-project",
+  "version": "1.0.0",
+  "scripts": {
+    "watch": "npx tailwindcss -i ./src/input.css -o ./output.css --watch"
   }
 }
